// Note: release workflow automatically updates "unreleased" headers in this file
= Changelog

// Release workflow will:
// - Fail when:
//   - there is no "== Unreleased" section header
//   - or the section contains no descriptive text
// - Replace the Unreleased section header with actual release version
// - Prepend a new Unreleased section header

== Unreleased

*

== v1.0.731

* Bump deps
* Pick up `:arglists` metadata for cljs analysis
https://github.com/cljdoc/cljdoc-analyzer/issues/71[#71]

== v1.0.724

* Bump deps
* Parse poms less naively
https://github.com/cljdoc/cljdoc/issues/742[cljdoc#742]
https://github.com/cljdoc/cljdoc-analyzer/issues/66[#66]
* Internal dev-facing stuff:
** Add eastwood linting https://github.com/cljdoc/cljdoc-analyzer/issues/67[#67]

== v1.0.718

* Bump default versions of Clojure, ClojureScript used for analysis https://github.com/cljdoc/cljdoc-analyzer/issues/60[#60]
* Bump deps

== v1.0.705

* Exclude MrAnderson inlined namespaces
https://github.com/cljdoc/cljdoc-analyzer/issues/4[#4]
* Bump deps

== v1.0.702

* Exclude vars starting with `->` and `map->` to the factory fns generated by `deftype` and `defrecord` https://github.com/cljdoc/cljdoc/issues/444[cljdoc/cljoc#444]
* Now supressing `MyType` and `MyRecord` for `deftype MyType` and `defrecord MyRecord` https://github.com/cljdoc/cljdoc/issues/645[cljdoc/cljdoc#645]

== v1.0.699

* Add support for ClojureScript 1.11 https://github.com/cljdoc/cljdoc-analyzer/issues/54[#54]
* Bump deps

== v1.0.695

* Add release workflow with tagging and versioning https://github.com/cljdoc/cljdoc-analyzer/issues/47[#47]
* Start to track changes in changelog